syntax = "proto3";

import "google/protobuf/timestamp.proto";

package proto;

message UserFullInfo{
  int32 userID = 1;
  string username = 2;
  string password_hashed = 3;
  string firstname = 4;
  string lastname = 5;
  string email = 6;
  string GoogleToken = 7;
  google.protobuf.Timestamp GoogleTokenExpiration = 8;
//  ngoài CSDL
  bool isCandidate = 9;
}

message UserMetaInfo{
  int32 userID = 1;
  string username = 2;
  string password = 3;
//  ngoài CSDL
  bool isCandidate = 4;
}

message CandidateFullInfo{
  UserFullInfo user = 1;
  google.protobuf.Timestamp birthDate = 2;
  map<int32, bool>  currentCVs = 3;
}

message RecruiterFullInfo{
  UserFullInfo user = 1;
  int32 companyID = 2;
  int32 roleID = 3;
  string departmentName = 4;
}

message Answer{
  int32 ansInt = 1;
  int64 ansLong = 2;
  string ansString = 3;
  bool ansBool = 4;
  bytes ansBytes= 5;
}

service UserService{
  rpc CandidateCreate (CandidateFullInfo) returns (CandidateFullInfo);
  rpc RecruiterCreate (RecruiterFullInfo) returns (RecruiterFullInfo);

  rpc userRead (UserMetaInfo) returns (UserFullInfo);
  rpc CandidateRead (UserMetaInfo) returns (CandidateFullInfo);
  rpc RecruiterRead (UserMetaInfo) returns (RecruiterFullInfo);

  rpc UserUpdate (UserFullInfo) returns (UserFullInfo);
  rpc CandidateUpdate (CandidateFullInfo) returns (CandidateFullInfo);
  rpc RecruiterUpdate (RecruiterFullInfo) returns (RecruiterFullInfo);

  rpc UserDelete (UserMetaInfo) returns (Answer);
}